--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        
+        <div id="gridContainer"></div>
+
+        <script type="text/javascript" src="scripts/etch.js"></script>
     </body>
 </html>
