added ability to color individual files with mouseover. SiZed grid heigh to be proportional to width (squares)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        <div id="gridContainer"></div>
+        <div id="gridContainer">
+            <div id="grid"></div>
+        </div>
+        
 
         <script type="text/javascript" src="scripts/etch.js"></script>
     </body>
