Added clear button to reset grid color to white

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
+        <button id="clearGrid">
+            Clear
+        </button>
         <div id="gridContainer">
             <div id="grid"></div>
         </div>
