Added Buttons for selecting which color mode to use. Created and even listener for the black button.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         <button id="clearGrid">
             Clear
         </button>
+        <button id='cellBlack'>
+            Black
+        </button>
+        <button id='cellRainbow'>
+            Rainbow
+        </button>
+        <button id='cellGradient'>
+            Gradient
+        </button>
         <div id="gridContainer">
         </div>
         
